ダミーアイコンをランキングの表に表示

--- a/app/views/ranking/show.html.erb
+++ b/app/views/ranking/show.html.erb
@@ -7,11 +7,17 @@ td {
 }
 </style>
 
+<%= @myId %>
+<%= @myName %>
+<%= @myScore %>
 <table>
   <% @users.each do |user| %>
     <tr>
+    <td><img width="100" src="<%= user[:icon] %>"></td>
+
     <td><%= user[:id] %></td>
     <td><%= user[:name] %></td>
+    <td><%= user[:score] %></td>
     </tr>
   <% end %>
 </table>
