ランキング画面のレイアウトを調整

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>EnpitGrasshopper2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta content="width=device-width,initial-scale=1.0" name="viewport">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
