プロフィールのexpをDBから参照するようにした

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -11,7 +11,7 @@
 <%= link_to 'Ranking', '/ranking/show' %>
 
 <script>
-let exp=0; //累計
+let exp=<%= @exp %>; //累計
 let nowexp=0; //現在のレベルでの経験値
 let nextexp=0; //レベルを一つ上げるための経験値
 let hoge=0;
