added memo and record controller

--- a/app/views/layouts/contents.html.erb
+++ b/app/views/layouts/contents.html.erb
@@ -29,8 +29,8 @@
                     <!-- <li class="active"><a href="#">Home</a></li> -->
                     <li><a href="/home">ホーム</a></li>
                     <li><a href="/rank">ランキング</a></li>
-                    <li><a href="/memos">メモ</a></li>
-                    <li><a href="/records">過去の記録</a></li>
+                    <li><a href="/memo">メモ</a></li>
+                    <li><a href="/record">過去の記録</a></li>
                 </ul>
             </div>
         </div>
