--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -8,7 +8,7 @@
 
 <meter id="exp_meter" value="0" max="10"></meter>
 <br>
-<%= link_to 'Ranking', '/ranking/show' %>
+<!-- <%= link_to 'Ranking', '/ranking/show' %> -->
 
 <script>
 let exp=<%= @exp %>; //累計
