fixed header text

--- a/app/views/layouts/contents.html.erb
+++ b/app/views/layouts/contents.html.erb
@@ -29,7 +29,7 @@
                     <!-- <li class="active"><a href="#">Home</a></li> -->
                     <li><a href="/home">ホーム</a></li>
                     <li><a href="/rank">ランキング</a></li>
-                    <li><a href="/memo">メモ</a></li>
+                    <li><a href="/memo">みんなのメモ</a></li>
                     <li><a href="/record">過去の記録</a></li>
                 </ul>
             </div>
