--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EnpitGrasshopper2</title>
+    <title>アリキリ！</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta content="width=device-width,initial-scale=1.0" name="viewport">
