--- a/app/views/layouts/contents.html.erb
+++ b/app/views/layouts/contents.html.erb
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EnpitGrasshopper</title>
+    <title>アリキリ！</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta content="width=device-width,initial-scale=1.0" name="viewport">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+    <%= favicon_link_tag('icon.png') %>
+    </head>
 
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -21,16 +22,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">アリキリ！</a>
+                <!-- <a class="navbar-brand" href="/">アリキリ！</a> -->
+                <img class="logo" src="assets/logo.png">
             </div>
 
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <!-- <li class="active"><a href="#">Home</a></li> -->
-                    <li><a href="/home">ホーム</a></li>
+                    <div class="flex">
+                    <li><a href="/home">プロフィール</a></li>
                     <li><a href="/rank">ランキング</a></li>
                     <li><a href="/memo">みんなのメモ</a></li>
                     <li><a href="/record">過去の記録</a></li>
+                    </div>
                 </ul>
             </div>
         </div>
