--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -4,7 +4,8 @@
 <img id="profile" class="profile_button" ontouchstart="" img width="240" src="<%= @icon %>">
 <br>
 <!-- <%= @avatar_name %> Level<%= @level %> -->
-<%= @avatar_name %> Level<span id="level"></span> 
+<%= current_user[:name] %> Level<span id="level"></span> 
+
 <br>
 
 <meter id="exp_meter" value="0" max="10"></meter>
