ホーム画面の吹き出しを作りました（矢印部分を細くしたい）

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -78,6 +78,50 @@ p.title {
   color: #707070;
 }
 
+.balloon2-left {
+  position: relative;
+  display: inline-block;
+  margin: 1.5em 0 1.5em 15px;
+  padding: 7px 10px;
+  min-width: 120px;
+  max-width: 100%;
+  color: #555;
+  font-size: 16px;
+  background: #FFF;
+  border: solid 3px #555;
+  box-sizing: border-box;
+  
+  width: 73px;
+  height: 193.3px;
+  border-radius: 16px;
+  border: solid 1px #707070;
+  background-color: #ffffff;
+}
+.balloon2-left:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -24px;
+  margin-top: -12px;
+  border: 12px solid transparent;
+  border-right: 12px solid #FFF;
+  z-index: 2;
+}
+.balloon2-left:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -30px;
+  margin-top: -14px;
+  border: 14px solid transparent;
+  border-right: 14px solid #555;
+  z-index: 1;
+}
+.balloon2-left p {
+  margin: 0;
+  padding: 0;
+}
+
 .exp {
   width: 145px;
   height: 22px;
