--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -2,6 +2,10 @@
 <p class="title">プロフィール</p>
 
 <img id="profile" class="profile_button" ontouchstart="" img width="240" src="<%= @icon %>">
+<div class="balloon2-left">
+  <p>今日のタスクを達成したら僕をクリックしてね</p>
+</div>
+
 <br>
 <!-- <%= @avatar_name %> Level<%= @level %> -->
 <%= @avatar_name %> Level<span id="level"></span> 
