--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -9,15 +9,15 @@
 <br>
 <!-- <%= @avatar_name %> Level<%= @level %> -->
 <%= current_user[:name] %> Level<span id="level"></span> 
-
 <br>
 
 <meter id="exp_meter" value="0" max="10"></meter>
 <div class="exp"><span id="exp"></span>/</div>
 
 <br>
-<p class="goal">目標：</p>
-<p class="task">やること：</p>
+<p class="goal">目標：<%= @current_profile[:goal] %></p>
+<br>
+<p class="task">やること：<%= @current_profile[:daily_task] %></p>
 
 <br>
 <!-- <%= link_to 'Ranking', '/ranking/show' %> -->
