ページ遷移時にカレンダーが表示されなくなるバグを修正しました

--- a/app/assets/stylesheets/record.scss
+++ b/app/assets/stylesheets/record.scss
@@ -7,7 +7,7 @@
 div#calendar{
     width: 80%;
     //height: 20%;
-    //max-width: 420px;
+    max-width: 620px;
     //max-height: 400px;
     margin: 0 auto;
     .fc-basic-view .fc-body .fc-row {
