--- a/app/views/ranking/show.html.erb
+++ b/app/views/ranking/show.html.erb
@@ -14,8 +14,8 @@
       <img width="40" src="<%= user[:icon] %>">
       <div class="profile-card-main">
         <div class="profile-card-user-name"><%= user[:name] %></div>
-        <div class="profile-card-daily-task">Daily task</div>
-        <div class="profile-card-goal">Goal</div>
+        <div class="profile-card-daily-task"><%= user[:daily_task] %></div>
+        <div class="profile-card-goal"><%= user[:goal] %></div>
       </div>
       <div class="profile-card-score">
         <div class="profile-card-score-label">スコア</div>
