--- a/app/assets/stylesheets/record.scss
+++ b/app/assets/stylesheets/record.scss
@@ -24,4 +24,62 @@ div#calendar{
 }
 
 
+.profile-card {
+    border: gray solid 1px;
+    border-radius: 6px;
+    color: var(--gray);
+    display: flex;
+    flex-direction: row;
+    margin: 8px 0;
+    padding: 8px;
+    width: 800px;
+    height: 200px;
+  }
+
+  .profile-card > * {
+    margin: 8px;
+  }
+  
+  .profile-card-rank {
+    background-color: var(--dark);
+    border-radius: 50%;
+    color: white;
+    font-size: 2em;
+    flex-shrink: 0;
+    line-height: 1.5em;
+    width: 1.5em;
+    height: 1.5em;
+    text-align: center;
+  }
+  
+  .profile-card > img {
+    border: gray solid 1px;
+    width: 	5em;
+    height: 	5em;
+  }
+  
+  .profile-card-main {
+    flex-grow: 1;
+  }
+  
+  .profile-card-user-name {
+    font-weight: bold;
+  }
+  
+  .profile-card-goal {
+    font-size: 0.75em;
+  }
+  
+  .profile-card-score {
+    text-align: right;
+  }
+  
+  .profile-card-score-label {
+    font-size: 0.75em;
+  }
+  
+  .profile-card-score-value {
+    font-size: 1.5em;
+  }
+  
 
