--- a/app/views/record/show.html.erb
+++ b/app/views/record/show.html.erb
@@ -5,19 +5,32 @@
 
 <br>
 <% @records.each do |record| %>
-  <% @memos.each do |memo| %>
-    <% if memo.record_id == record.id %>
-      <%= current_user[:name] %>
-      <%= @current_profile[:daily_task] %>
+  <div class="profile-card">
+    <% @memos.each do |memo| %>
+      <% if memo.record_id == record.id %>
       <img src="/assets/<%=@current_profile[:avatar_url]%>" width=80px>
-      <br>
-      内容:<%= memo.memo %>
-      <br>
-      <%= memo.like_count%>ファボ
-      <br>
-      <%= memo.created_at %>
-      <br>
-      <br>
+
+        <div class="profile-card-user-name"> 
+          <%= current_user[:name] %>
+        </div>
+        <div class="profile-card-daily-task">
+          <%= @current_profile[:daily_task] %>
+        </div>
+        <br>
+        <div class="memo-content">
+          内容:<%= memo.memo %>
+        </div>
+        <br>
+        <div class="memo-like">
+          <%= memo.like_count%>ファボ
+        </div>
+        <br>
+        <div class="memo-date">
+          <%= memo.created_at %>
+        </div>
+        <br>
+        <br>
+      <%end%>
     <%end%>
-  <%end%>
+  </div>
 <%end%>
