--- a/app/assets/stylesheets/ranking.scss
+++ b/app/assets/stylesheets/ranking.scss
@@ -6,8 +6,9 @@
 .tag {
   border: solid 2px;
   border-radius: 10rem;
+  cursor: pointer;
   display: inline-block;
-  margin: 4px;
+  margin: .25em;
   padding: .25em 1em;
 }
 
@@ -20,6 +21,12 @@
 .tag[data-is-selected="true"] {
   background-color: var(--dark);
   border-color: var(--dark);
+  color: white;
+}
+
+.tag:hover {
+  background-color: gray;
+  border-color: gray;
   color: white;
 }
 
