--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -15,12 +15,22 @@
 <div class="exp"><span id="exp"></span>/</div>
 
 <br>
-<p class="goal">目標：<%= @current_profile[:goal] %></p>
+<p class="goal" contentEditable="true">目標：<%= @current_profile[:goal] %></p>
 <br>
-<p class="task">やること：<%= @current_profile[:daily_task] %></p>
+<br>
+<p class="task" contentEditable="true">やること：<%= @current_profile[:daily_task] %></p>
+<br>
+<table>
+ <tbody>
+      <tr>
+        <td><%= @current_profile[:goal] %></td>
+        <td><%= @current_profile[:daily_task] %></td>
+        <td><%= link_to 'Edit',edit_profile_path(@current_profile)   %></td>
+      </tr>
+  </tbody>
+</table>
 
-<br>
-<!-- <%= link_to 'Ranking', '/ranking/show' %> -->
+ <!--<%= link_to 'Ranking', '/ranking/show' %> -->
 
 <script>
 let exp=<%= @exp %>; //累計
@@ -40,6 +50,9 @@ prof.addEventListener('click',function(){
     set_view_value(nowexp,nextexp,bar_rate);
 },false);
 
+function save_content(){
+
+}
 //累計expから現在のレベルでのexpとレベルを一つ上げるためのexpを計算する
 function calc_next_exp(level){
     if(level!=1){
