登録画面のレイアウト調整(bodyを利用しないようにログイン画面も修正)

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,55 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.new-user {
+    max-width: 300px;
+    padding: 20px 20px;
+    margin: 10px auto;
+}
+
+.already-user {
+    font-size: 14px;
+}
+
+.form-control,
+.btn.btn-create {
+    width: 100%;
+    font-size: 16px;
+    margin-bottom: 10px;
+    z-index: 1;
+    position: relative;
+    border-radius: 5px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.btn.btn-create {
+    font-weight: 700;
+    height: 44px;
+    color: #60b62f;
+    background-color: #fff;
+    margin-top: 20px;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    cursor: default;
+    padding: 0px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border: solid;
+    -o-transition: all 0.218s;
+    -moz-transition: all 0.218s;
+    -webkit-transition: all 0.218s;
+    transition: all 0.218s;
+}
+
+.btn.btn-create:hover,
+.btn.btn-create:active,
+.btn.btn-create:focus {
+    color: #fff;
+    background-color: #60b62f;
+    border: solid;
+    border-color: #60b62f;
+}
