--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,24 +1,24 @@
-<h1>Users#new</h1>
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="new-user">
     <%= form_for(@user) do |f| %>
+      <img src="../assets/logo2.png" id="login-logo">
 
       <%= render 'shared/error_messages' %>
 
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
+      <%= f.text_field :name, class: 'form-control', placeholder: "Name" %>
 
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+      <%= f.email_field :email, class: 'form-control', placeholder: "Email address" %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+      <%= f.password_field :password, class: 'form-control', placeholder: "Password" %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "Create my account", class: "btn btn-create" %>
     <% end %>
+    </div>
+    <div class="already-user">
+      <p>Already have an account? <%= link_to "Log in", '/login' %></p>
+    </div>
   </div>
 </div>
 
@@ -27,14 +27,17 @@
 <style>
 /* forms */
 
-input, textarea, select, .uneditable-input {
-  border: 1px solid #bbb;
-  width: 100%;
-  margin-bottom: 15px;
-  @include box_sizing;
-}
+# input, textarea, select, .uneditable-input {
+#   border: 1px solid #bbb;
+#   width: 100%;
+#   margin-bottom: 15px;
+#   @include box_sizing;
+# }
 
-input {
-  height: auto !important;
-}
+# input {
+#   height: auto !important;
+# }
+
+body { background-color: #7F7F7F; }
+
 </style>
