クエリストリングに応じてタグの選択を切り替えられるよう変更

--- a/app/views/ranking/show.html.erb
+++ b/app/views/ranking/show.html.erb
@@ -9,7 +9,7 @@
 
   <div class="tags">
     <% @tags.each do |tag| %>
-      <div class="tag" data-is-selected="true"><%= tag %></div>
+      <div class="tag" data-is-selected="<%= @selected_tags.include?(tag) %>"><%= tag %></div>
     <% end %>
   </div>
 
