アイコンのサイズを修正

--- a/app/assets/stylesheets/record.scss
+++ b/app/assets/stylesheets/record.scss
@@ -48,7 +48,7 @@ div#calendar{
     margin: 8px;
   }
   
-  img {
+  .profile-card > img {
     border: gray solid 1px;
     width: 100px;
     height: 100px;
