--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -39,5 +39,20 @@
 # }
 
 body { background-color: #7F7F7F; }
-
+.row {
+    width: 300px;
+    background-color: #fff;
+    text-align: center;
+    /* just in case there no content*/
+    padding: 20px 25px 30px;
+    margin: 0 auto 25px;
+    margin-top: 50px;
+    /* shadows and rounded borders */
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+}
 </style>
