--- a/app/assets/stylesheets/ranking.scss
+++ b/app/assets/stylesheets/ranking.scss
@@ -1,9 +1,9 @@
-.tags {
+.tag-buttons {
   display: flex;
   flex-wrap: wrap;
 }
 
-.tag {
+.tag-button {
   border: solid 2px;
   border-radius: 10rem;
   cursor: pointer;
@@ -12,19 +12,19 @@
   padding: .25em 1em;
 }
 
-.tag:not([data-is-selected="true"]) {
+.tag-button:not([data-is-selected="true"]) {
   background-color: white;
   border-color: gray;
   color: gray;
 }
 
-.tag[data-is-selected="true"] {
+.tag-button[data-is-selected="true"] {
   background-color: var(--dark);
   border-color: var(--dark);
   color: white;
 }
 
-.tag:hover {
+.tag-button:hover {
   background-color: gray;
   border-color: gray;
   color: white;
