--- a/app/views/ranking/show.html.erb
+++ b/app/views/ranking/show.html.erb
@@ -7,9 +7,9 @@
   <%= @myScore %>
   <%= @tags %>
 
-  <div class="tags">
+  <div class="tag-buttons">
     <% @tags.each do |tag| %>
-      <div class="tag" data-is-selected="<%= @selected_tags.include?(tag) %>"><%= tag %></div>
+      <div class="tag-button" data-is-selected="<%= @selected_tags.include?(tag) %>" data-tag-name="<%= tag %>"><%= tag %></div>
     <% end %>
   </div>
 
@@ -31,3 +31,34 @@
     </div>
   <% end %>
 </div>
+
+<script>
+const tags = new Set(<%= @tags.to_json.html_safe %>);
+const selectedTags = new Set(<%= @selected_tags.to_json.html_safe %>);
+
+const excludedTags = new Set();
+for (const tag of tags) {
+  if (!selectedTags.has(tag)) {
+    excludedTags.add(tag);
+  }
+}
+
+for (const tagButton of document.getElementsByClassName('tag-button')) {
+  tagButton.addEventListener('click', () => {
+    const tagName = tagButton.dataset.tagName;
+    const newExcludedTags = new Set(excludedTags);
+    
+    if (selectedTags.has(tagName)) {
+      newExcludedTags.add(tagName);
+    } else {
+      newExcludedTags.delete(tagName);
+    }
+
+    const newSearch = '?' + [...newExcludedTags].map(
+      (tag, index) => `exclude[${index}]=${tag}`
+    ).join('&');
+
+    location.href = location.origin + location.pathname + newSearch;
+  });
+}
+</script>
