--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -12,7 +12,7 @@ h1.title {
   color: #707070;
 }
 
-img.profile_button{
+input[type="image"].profile_button{
   width: 250px;
   height: 250px;
   border-radius: 8px;
@@ -22,12 +22,12 @@ img.profile_button{
   border-bottom: solid 4px #b5b5b5;
 }
 
-img.profile_button:hover{
+input[type="image"].profile_button:hover{
 	opacity:0.7;
 	cursor: pointer;
 }
 
-img.profile_button:active{
+input[type="image"].profile_button:active{
     position: relative;
     top:3px;
 }
