--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="exp-div">
       <meter id="exp_meter" value="0" max="10" style="width: 75%"></meter>
-      <p><span id="exp"></span>/<span id="needexp"></span><p>
+      <p><%= @current_profile[:experience] %> / <p>
     </div>
   </div>
 </div>
@@ -41,67 +41,3 @@
       text-align: center;
   }
 </style>
-
-
-<script>
-let exp=<%= @exp %>; //累計
-let nowexp=0; //現在のレベルでの経験値
-let nextexp=0; //レベルを一つ上げるための経験値
-let hoge=0;
-let hoge2=0;
-let bar_rate=0;
-let level=1;
-
-const prof = document.getElementById("profile");
-
-prof.addEventListener('click',function(){
-    exp+=Math.floor(1000*1.1**(level-1));
-    calc_next_exp(1);
-    calc_bar_value();
-    set_view_value(nowexp,nextexp,bar_rate);
-},false);
-
-function save_content(){
-
-}
-//累計expから現在のレベルでのexpとレベルを一つ上げるためのexpを計算する
-function calc_next_exp(level){
-    if(level!=1){
-    for(let i=1;i<level-1;i++){
-        needexp+=1500*1.3**(i);
-        preneedexp+=1500*1.3**(i-1);
-    }
-    nextexp=needexp-preneedexp;
-    nowexp=exp-needexp;
-    }else{ //レベル1のとき
-        nextexp=1500;
-        nowexp=exp;
-    }
-}
-//バーの割合の計算
-function calc_bar_value(){
-    bar_rate =nowexp/nextexp;
-}
-function set_view_value(nowexp,nextexp,bar_rate){
-    const expm=document.getElementById("exp_meter");
-    const exp_ref=document.getElementById("exp");
-    const nexp_ref=document.getElementById("needexp");
-    const level_ref=document.getElementById("level");
-    exp_ref.textContent=exp;
-    nexp_ref.textContent=needexp;
-    level_ref.textContent=level;
-    expm.max=nextexp;
-    expm.value=nowexp;
-    if(bar_rate>1){
-        level++;
-        if(level>20){
-            prof.src="assets/ニワトリ.png"
-        }
-        else if(level>10){
-            prof.src="assets/ひよこ.png"
-        }
-    }
-}
-
-</script>
-
