メモ機能途中

--- a/app/views/record/show.html.erb
+++ b/app/views/record/show.html.erb
@@ -19,7 +19,7 @@
           <div class="profile-card-score-label"><%= @current_profile[:daily_task] %></div>
         </div>
       </div>
-
+      <%= link_to "メモする", '/creatememo' %>
     <%end%>
   <%end%>
 <%end%>
