サインアップ画面とログイン画面を日本語対応、デザイン修正

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -9,7 +9,7 @@
 }
 
 .already-user {
-    font-size: 14px;
+    font-size: 13.5px;
 }
 
 .form-control,
@@ -17,6 +17,7 @@
     width: 100%;
     font-size: 16px;
     margin-bottom: 10px;
+    padding: 10px;
     z-index: 1;
     position: relative;
     border-radius: 5px;
