--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -12,14 +12,22 @@ h1.title {
   color: #707070;
 }
 
+.avatar,
+.goalandtask {
+  width: 350px;
+  margin: 20px auto 40px;
+  text-align: center;
+}
+
 input[type="image"].profile_button{
-  width: 250px;
-  height: 250px;
+  width: 270px;
+  height: 270px;
   border-radius: 8px;
   overflow: hidden;
   font-weight: bold;
   box-shadow: inset 0 2px 0 rgba(255,255,255,0.5), 0 2px 2px rgba(0, 0, 0, 0.19);
-  border-bottom: solid 4px #b5b5b5;
+  border-bottom: solid 4px #b4b4b4;
+  margin: 10px auto;
 }
 
 input[type="image"].profile_button:hover{
@@ -31,6 +39,49 @@ input[type="image"].profile_button:active{
     position: relative;
     top:3px;
 }
+
+
+.balloon {
+  position: relative; /* 三角の位置を固定するために設定 */
+  width: 340px; /* 幅 */
+  margin: 40px auto;
+  padding: 20px; /* ふきだし内の余白 */
+  background: #ddd; /* 背景色 */
+  text-align: center; /* テキストの揃え */
+  border-radius: .4em;
+}
+
+.balloon::after { /* 三角の部分 */
+  content: '';
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border: 29px solid transparent;
+	border-top-color: #ddd;
+	border-bottom: 0;
+	border-left: 0;
+	margin-left: 50px;
+	margin-bottom: -20px;
+}
+
+.balloon p {
+  margin-bottom: 0;
+}
+
+
+.name-div,
+.level-div {
+  display: inline-block;
+  font-size: 25px;
+  margin-top: 20px;
+}
+
+.level-div {
+  margin-left: 35px;
+}
+
 
 .bar{
     max-width: 600px;
@@ -55,69 +106,8 @@ input[type="image"].profile_button:active{
     }
   }
 
-
-
-.balloon2-left {
-  position: relative;
-  display: inline-block;
-  margin: 1.5em 0 1.5em 15px;
-  padding: 7px 10px;
-  min-width: 120px;
-  max-width: 100%;
-  color: #555;
-  font-size: 16px;
-  background: #FFF;
-  border: solid 3px #555;
-  box-sizing: border-box;
-  
-  width: 73px;
-  height: 193.3px;
-  border-radius: 16px;
-  border: solid 1px #707070;
-  background-color: #ffffff;
-}
-
-.balloon2-left:before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: -24px;
-  margin-top: -12px;
-  border: 12px solid transparent;
-  border-right: 12px solid #FFF;
-  z-index: 2;
-}
-
-.balloon2-left:after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: -30px;
-  margin-top: -14px;
-  border: 14px solid transparent;
-  border-right: 14px solid #555;
-  z-index: 1;
-}
-
-.balloon2-left p {
-  margin: 0;
-  padding: 0;
-}
-
-.name-div,
-.level-div {
-  display: inline-block;
-  font-size: 25px;
-  margin-top: 20px;
-}
-
-.level-div {
-  margin-left: 35px;
-}
-
-.exp-div p {
-  width: 145px;
-  height: 22px;
+.exp-div p,
+.exp-div span {
   font-family: HiraKakuProN-W3;
   font-size: 20px;
   font-weight: normal;
@@ -129,10 +119,14 @@ input[type="image"].profile_button:active{
   color: #707070;
 }
 
+.goalandtask {
+  border: .5px solid;
+  border-radius: 8px;
+  padding: 20px;
+}
+
 .goal p,
 .task p {
-  width: 100px;
-  height: 20px;
   font-family: HiraKakuProN-W6;
   font-size: 20px;
   font-weight: normal;
@@ -145,19 +139,11 @@ input[type="image"].profile_button:active{
   display: contents;
 }
 
-// p.task {
-  //   width: 100px;
-  //   height: 20px;
-  //   font-family: HiraKakuProN-W6;
-  //   font-size: 20px;
-  //   font-weight: normal;
-  //   font-style: normal;
-  //   font-stretch: normal;
-  //   line-height: 1.7;
-  //   letter-spacing: normal;
-  //   text-align: center;
-  //   color: #3a3a3a;
-  // }
+.edit p {
+  font-size: 18px;
+  text-align: rigit;
+  margin-top: .5rem;
+}
 
 .flex > li {
   width: 125px;
@@ -178,6 +164,7 @@ input[type="image"].profile_button:active{
   -webkit-justify-content: center; /* 横方向中央揃え（Safari用） */
   justify-content: center; /* 横方向中央揃え */
 }
+
 
 .logo {
   width: 180px;
