--- a/app/views/record/show.html.erb
+++ b/app/views/record/show.html.erb
@@ -15,7 +15,7 @@
         <img src="/assets/<%=@current_profile[:avatar_url]%>" width=80px>
         <div class="profile-card-main">
           <div class="profile-card-user-name"><%= current_user[:name] %></div>
-          <div class="profile-card-date"><%= memo.created_at %>
+          <div class="profile-card-date"><%= record.created_at %>
           </div>
           <div class="memo-content"><p>メモ : <%= memo.memo %></div>
           <div class="memo-like"><%= memo.like_count%>ファボ</div>
