シードの画像の調整、ファボの表示を隠した

--- a/app/views/memo/show.html.erb
+++ b/app/views/memo/show.html.erb
@@ -15,7 +15,7 @@
                 <div class="profile-card-date"><%= record.created_at %>
                 </div>
                 <div class="memo-content"><p>メモ : <%= memo.memo %></div>
-                <div class="memo-like"><%= memo.like_count%>ファボ</div>
+                <!-- 未実装 <div class="memo-like"><%= memo.like_count%>ファボ</div> -->
                 <div class="profile-card-tag">
                 <% @tags.each do |tag| %>
                     <% if user.id == tag.user_id %>
