--- a/app/views/record/show.html.erb
+++ b/app/views/record/show.html.erb
@@ -18,7 +18,7 @@
           <div class="profile-card-date"><%= record.created_at %>
           </div>
           <div class="memo-content"><p>メモ : <%= memo.memo %></div>
-          <div class="memo-like"><%= memo.like_count%>ファボ</div>
+          <!-- 未実装 <div class="memo-like"><%= memo.like_count%>ファボ</div> -->
         </div>
         <div class="profile-card-task">
           <div class="profile-card-daily-task"><%= @current_profile[:daily_task] %></div>
