プロフィールページにカレンダーを追加

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,4 +1,8 @@
+<head>
+  <%= include_gon %>
+</head>
 
+<body>
 <h1 class="title">プロフィール</h1>
 
 <div class="avatar">
@@ -36,6 +40,15 @@
 </div>
 
  <!--<%= link_to 'Ranking', '/ranking/show' %> -->
+
+ <div id="calendar"></div>
+  <div style='text-align: center;'><%= link_to '詳しく見る', '/record' %></div>
+
+<br><br>
+<br>
+<br>
+
+  </body>
 
 <style>
   
