--- a/app/views/layouts/contents.html.erb
+++ b/app/views/layouts/contents.html.erb
@@ -23,9 +23,9 @@
           <ul class="navbar-nav">
             <!-- <li class="active"><a href="#">Home</a></li> -->
             <li class="nav-item"><a class="nav-link" href="/home">プロフィール</a></li>
+            <li class="nav-item"><a class="nav-link" href="/record">あなたの記録</a></li>
+            <li class="nav-item"><a class="nav-link" href="/memo">みんなの記録</a></li>
             <li class="nav-item"><a class="nav-link" href="/rank">ランキング</a></li>
-            <li class="nav-item"><a class="nav-link" href="/memo">みんなのメモ</a></li>
-            <li class="nav-item"><a class="nav-link" href="/record">過去の記録</a></li>
           </ul>
         </div>
       </div>
