--- a/app/views/layouts/contents.html.erb
+++ b/app/views/layouts/contents.html.erb
@@ -26,6 +26,8 @@
             <li class="nav-item"><a class="nav-link" href="/record">あなたの記録</a></li>
             <li class="nav-item"><a class="nav-link" href="/memo">みんなの記録</a></li>
             <li class="nav-item"><a class="nav-link" href="/rank">ランキング</a></li>
+            <li class="nav-item"><a class="nav-link" href="/logout">ログアウト</a></li>
+
           </ul>
         </div>
       </div>
