--- a/app/views/record/show.html.erb
+++ b/app/views/record/show.html.erb
@@ -19,8 +19,8 @@
           <div class="profile-card-score-label"><%= @current_profile[:daily_task] %></div>
         </div>
       </div>
-      <!-- <%= link_to "メモする", '/creatememo', data: { record_id: record.id.to_s } %> -->
-      <%= link_to "リンクだよ", controller: "memo", action: "new", order: "created_at" %>
+      <!-- <%= link_to "メモする", '/creatememo', record_id: record.id.to_s %> -->
+      <%= link_to "メモを追加", controller: "memo", action: "new", record_id: record.id %>
 
     <%end%>
   <%end%>
