--- a/app/views/memo/show.html.erb
+++ b/app/views/memo/show.html.erb
@@ -7,7 +7,7 @@
             <% @profiles.each do |profile| %>
             <% if user.id == profile.user_id %>
             <div class="profile-card">
-            <img src="/assets/<%= profile[:avatar_url] %>" width=80px>
+            <img src="<%= profile.get_avatar %>" width=80px>
             <div class="profile-card-main">
                 <div class="profile-card-user-name"><%= user[:name] %></div>
                 <div class="profile-card-date"><%= record.created_at %>
