--- a/app/views/record/show.html.erb
+++ b/app/views/record/show.html.erb
@@ -11,7 +11,7 @@
 <% @records.each do |record| %>
 
       <div class="profile-card">
-        <img src= <%=@current_profile.set_avatar(@current_profile.get_level)%> width=80px>
+        <img src= <%=@current_profile.get_avatar%> width=80px>
         <div class="profile-card-main">
           <div class="profile-card-user-name"><%= current_user[:name] %></div>
           <div class="profile-card-date"><%= record.created_at %>
